2005-07-02

* most of the development is occurring in the Set-Infinite and Span modules - stay tuned.

== Changes for 0.01

* changelog created 2005-07-06